<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Manoa Bulletin Board</string>
    <string name="welcome_message">Welcome to the Manoa Bulletin Board!</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">Find a Post</string>
    <string name="search_button">Search</string>
    <string name="refresh_button">Refresh</string>
    <string name="create_post_button">Create a Post</string>
    <string name="edit_post_button">Edit</string>
    <string name="delete_post_button">Delete</string>
    <string name="categories_button">Categories</string>

    <!-- Strings for create post screen -->
    <string name="title_activity_create_post_screen">Create a Post</string>
    <string name="create_post_screen_title">Title</string>
    <string name="create_post_screen_email">Contact Email</string>
    <string name="create_post_screen_number">Contact Number (optional)</string>
    <string name="create_post_screen_description">Description</string>
    <string name="create_post_screen_start_date">Start date </string>
    <string name="create_post_screen_end_date">End date   </string>
    <string name="create_post_screen_start_time">Start time </string>
    <string name="create_post_screen_end_time">End time    </string>
    

    <string-array name="create_post_screen_month">
        <item><i>- Month -</i></item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>                                                                                                                       
    </string-array>
    <string-array name="create_post_screen_day">
        <item><i>- Day -</i></item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>                                                                                                                      
    </string-array>
    <string-array name="create_post_screen_year">
        <item><i>- Year -</i></item>
        <item>2014</item>
        <item>2015</item>
		<item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
    </string-array>
    <string-array name="create_post_screen_hour">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>        
    </string-array>
    <string-array name="create_post_screen_minute">
        <item>00</item>
        <item>05</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
        <item>45</item>
        <item>50</item>
        <item>55</item>        
    </string-array>
    <string-array name="create_post_screen_ampm">
        <item>A.M.</item>
        <item>P.M.</item>
    </string-array>
    
    <string-array name="create_post_screen_categories">
        <item>- Category -</item>
        <item>Food Truck</item>
        <item>For Sale</item>
        <item>Event</item>
        <item>Club</item>
        <item>Other</item>
    </string-array>

    <string name="create_post_screen_submit">Submit</string>
    <string name="create_post_screen_cancel">Cancel</string>

    <!-- Strings for categories screen -->
    <string name="title_activity_categories_screen">Sort By Categories</string>
    <string name="categories_screen_show_all">Show All</string>
    <string name="categories_screen_food_truck">Food Trucks</string>
    <string name="categories_screen_clubs">Clubs</string>
    
    <!-- Strings for view post screen -->
    <string name="title_activity_view_post_screen">Details</string>
	<string name="view_post_screen_title">Name</string>
	<string name="view_post_screen_email">No contact email provided</string>
	<string name="view_post_screen_contact_number">No phone number provided</string>

</resources>