<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.manoabulletinboard.MainScreen" >

        <EditText
            android:id="@+id/create_post_screen_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/create_post_screen_title" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/create_post_screen_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/create_post_screen_email" />
        <EditText
            android:id="@+id/create_post_screen_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/create_post_screen_number" />

        <Spinner
            android:id="@+id/create_post_screen_categories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/create_post_screen_categories" />

        <EditText
            android:id="@+id/create_post_screen_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine"
            android:hint="@string/create_post_screen_description" />
		<fragment
    		class="com.google.android.gms.maps.MapFragment"
    		android:id="@+id/createScreenMap"
    		android:layout_width="match_parent"
    		android:layout_height="250dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
        <Button
            android:id="@+id/create_post_screen_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_post_screen_submit" />
        <Button 
            android:id="@+id/create_post_screen_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_post_screen_cancel"/>
        </LinearLayout>
    
</LinearLayout>