<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:focusable="true"
	android:focusableInTouchMode="true"
    tools:context="com.example.manoabulletinboard.ViewPostScreen" >
<!--  To make it a single line that scrolls right, uncomment these items -->
<!-- 	<HorizontalScrollView  -->
<!-- 	    android:layout_width="fill_parent" -->
<!-- 	    android:layout_height="wrap_content"> -->
		<TextView 
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:textSize="28sp"
	    	android:textStyle="bold"
	    	android:scrollHorizontally="true"
	    	android:hint="@string/view_post_screen_title"
	    	android:id="@+id/view_post_screen_title" />
<!-- 			    	android:singleLine="true" -->
<!-- 	</HorizontalScrollView> -->
	<View
    	android:layout_width="fill_parent"
    	android:layout_height="1dp"
    	android:background="@android:color/darker_gray"/>
	<TextView 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="5dp"
	    android:layout_marginBottom="5dp"
	    android:textSize="15sp"
	    android:textStyle="bold"
	    android:hint="TEST TEST"
	    android:id="@+id/view_post_screen_description"/>
	<View
    	android:layout_width="fill_parent"
    	android:layout_height="1dp"
    	android:background="@android:color/darker_gray"/>
	<TextView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="5dp"
	    android:textSize="15sp"
	    android:hint="@string/view_post_screen_email"
	    android:id="@+id/view_post_screen_email"/>
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="5dp"
	    android:textSize="15sp"
	    android:hint="@string/view_post_screen_contact_number"
	    android:id="@+id/view_post_screen_contact_number" />
</LinearLayout>
