<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:focusable="true"
	android:focusableInTouchMode="true"
    tools:context="com.example.manoabulletinboard.MainScreen" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/welcome_message" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

	<ScrollView 
	    android:layout_width="0dp"
	    android:layout_height="wrap_content"
	    android:layout_weight="1">
        	<EditText 
            	android:layout_width="fill_parent"
            	android:layout_height="wrap_content"
            	android:singleLine="true"
            	android:ellipsize="start"
            	android:hint="@string/search_hint"
  				android:id="@+id/search_text" />
	</ScrollView>
        <Button 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/search_button" 
            android:id="@+id/search_button" />
<!-- 		<Button  -->
<!--             android:layout_width="wrap_content" -->
<!--             android:layout_height="wrap_content" -->
<!--             android:hint="@string/refresh_button" -->
<!--             android:id="@+id/refresh_button" /> -->
    </LinearLayout>
	<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/swipe_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/main_screen_scroll_view" >
    </ListView>
    </android.support.v4.widget.SwipeRefreshLayout>
</LinearLayout>


    <!-- The navigation drawer (add more when we get map activity set up -->
    <ListView android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="#111"/>
</android.support.v4.widget.DrawerLayout>